--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loan Calculator</title>
   <style>
     body {
@@ -13,6 +14,7 @@
       align-items: center;
       justify-content: center;
       margin: 0;
+      padding: 10px;
     }
 
     .container {
@@ -30,7 +32,6 @@
         opacity: 0;
         transform: translateY(10px);
       }
-
       to {
         opacity: 1;
         transform: translateY(0);
@@ -44,34 +45,35 @@
     }
 
     p.help {
-      margin: 0 0 5px;
-      color: var(--muted);
+      margin: 0 0 10px;
+      color: #333;
       font-size: .95rem;
-      align-items: center;
+      text-align: center;
     }
 
     .grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 26px;
+      gap: 20px;
     }
 
     label {
       display: block;
-      margin-top: 15px;
+      margin-top: 10px;
       font-weight: 600;
       color: #000;
       font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     input {
-      width: 90%;
+      width: 100%;
       padding: 12px;
       margin-top: 6px;
       border: 1.5px solid #7f7a7a;
       border-radius: 10px;
       font-size: 16px;
       transition: 0.3s;
+      box-sizing: border-box;
     }
 
     input:focus {
@@ -105,10 +107,19 @@
       border-radius: 15px;
       border: 1px solid #e0e0e0;
       line-height: 1.6;
+      font-size: 15px;
+      word-wrap: break-word;
     }
 
     .result b {
       color: #007BFF;
+    }
+
+    /* 📱 Mobile Adjustments */
+    @media (max-width: 600px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
@@ -160,6 +171,7 @@
         tggl = false;
       }
     }
+
     function addWeeks(date, weeks) {
       const result = new Date(date);
       result.setDate(result.getDate() + weeks * 7);
@@ -169,6 +181,7 @@
     function formatISO(date) {
       return date.toISOString().split("T")[0];
     }
+
     function calculateLoan() {
       const startDate = new Date(document.getElementById("startDate").value);
       const amount = parseFloat(document.getElementById("amount").value);
