--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         opacity: 0;
         transform: translateY(10px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
@@ -111,6 +112,12 @@
       word-wrap: break-word;
     }
 
+    .calculateBtn {
+      display: flex;
+      gap: 30px;
+      padding-right: 5px;
+    }
+
     .result b {
       color: #007BFF;
     }
@@ -144,7 +151,7 @@
     <div class="grid">
       <div>
         <label>Interest Rate (per month %):</label>
-        <input type="number" id="interest" value="5">
+        <input type="number" id="interest" value="5" placeholder="e.g. 5">
       </div>
       <div>
         <label>Duration (months):</label>
@@ -152,7 +159,10 @@
       </div>
     </div>
 
-    <button id="toggleBtn" onclick="handleToggle()">Calculate</button>
+    <div class="calculateBtn">
+      <button id="toggleBtn" onclick="calculateLoan()">Calculate</button>
+      <button id="clearBtn" style="display:none;" onclick="clearFields()">Clear Fields</button>
+    </div>
 
     <div id="result" class="result"></div>
   </div>
@@ -160,17 +170,15 @@
   <script>
     let tggl = false;
 
-    function handleToggle() {
-      if (!tggl) {
-        calculateLoan();
-        document.getElementById("toggleBtn").innerText = "Clear";
-        tggl = true;
-      } else {
-        clearFields();
-        document.getElementById("toggleBtn").innerText = "Calculate";
-        tggl = false;
-      }
-    }
+    const inputs = document.querySelectorAll("#startDate, #amount, #months");
+    const clearBtn = document.getElementById("clearBtn");
+
+    inputs.forEach(input => {
+      input.addEventListener("input", () => {
+        const hasValue = Array.from(inputs).some(i => i.value.trim() !== "");
+        clearBtn.style.display = hasValue ? "block" : "none";
+      });
+    });
 
     function addWeeks(date, weeks) {
       const result = new Date(date);
@@ -198,11 +206,14 @@
       const weeklyPayment = totalRepayment / totalWeeks;
       const dailyPayment = weeklyPayment / 5;
       const dueDate = addWeeks(startDate, totalWeeks);
+      const interestPayment = (interest / 100) * amount
+      const interestByDuration = interestPayment * months
 
       document.getElementById("result").innerHTML = `
         <b>Loan Summary</b><br>
         Loan Amount: ₵${amount.toFixed(2)} <br>
-        Interest Rate: ${interest}% per month <br>
+        Interest Rate: ${interest}% per month = ${interestPayment} <br>
+        Interest Rate by Duration: ${interestByDuration} <br>
         Duration: ${months} months (${totalWeeks} weeks) <br><br>
         <b>Total Repayment:</b> ₵${totalRepayment.toFixed(2)} <br>
         <b>Weekly Payment:</b> ₵${weeklyPayment.toFixed(2)} <br>
